--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,10 +20,15 @@
     <string name="title_section1">initiated</string>
     <string name="title_section2">others</string>
     <string name="title_activity_homepage">Homepage</string>
-    <string name="title_activity_login">LoginActivity</string>
+    
+    <string name="title_activity_loginactivity">LoginActivity</string>
      <string name="title_activity_initiated">Initiated</string>
     <string name="title_activity_schedule_an_event">Schedule_an_event</string>
       <string name="title_activity_date">DatePicke</string>
        <string name="title_activity_time">Time</string>
        <string name="title_activity_send_invitation">Send_invitation</string>
+        <string name="title_activity_checksche">Checksche</string>
+        <string name="title_activity_action">Action</string>
+          <string name="title_activity_mymeet">Mymeet</string>
+           <string name="title_activity_timecoordinator">Timecoordinator</string>
 </resources>
